[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-ascend"
version = "0.1.0"
authors = [{ name = "TonyMint" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation for Ascend platform"
keywords = ["vllm", "llm", "npu"]
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/TobyMint/nano-vllm-ascend"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]
